--- a/index.html
+++ b/index.html
@@ -9,20 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
-    <h3>CSS Filter Property</h3>
+    <h2>CSS Filter Property</h2>
+ 
     <div class="container">
-    <i class="fa-solid fa-shirt" id="greyscale"></i>
-    <i class="fa-solid fa-shirt" id="blur"></i>
-    <i class="fa-solid fa-shirt"id="brightness"></i>
-    <i class="fa-solid fa-shirt" id="contrast"></i>
-    <i class="fa-solid fa-shirt" id="dropShadow"></i>
-    <i class="fa-solid fa-shirt" id="hueRotate"></i>
-    <i class="fa-solid fa-shirt" id="invert"></i>
-    <i class="fa-solid fa-shirt" id="opacity"></i>
-    <i class="fa-solid fa-shirt" id="saturate"></i>
-    <i class="fa-solid fa-shirt" id="sepia"></i>
-    <i class="fa-solid fa-shirt" id="multipleFilters"></i>
-    <i class="fa-solid fa-shirt" id="multipleFilters2"></i>
+      <i class="fa-solid fa-shirt" id="greyscale"> <h3>Greyscale</h3></i>
+    <i class="fa-solid fa-shirt" id="blur"><h3>Blur</h3></i>
+    <i class="fa-solid fa-shirt"id="brightness"><h3>Brightness</h3></i>
+    <i class="fa-solid fa-shirt" id="contrast"><h3>Contrast</h3></i>
+    <i class="fa-solid fa-shirt" id="dropShadow"><h3>Drop Shadow</h3></i>
+    <i class="fa-solid fa-shirt" id="hueRotate"><h3>Hue-Rotate</h3></i>
+    <i class="fa-solid fa-shirt" id="invert"><h3>Invert</h3></i>
+    <i class="fa-solid fa-shirt" id="opacity"><h3>Opacity</h3></i>
+    <i class="fa-solid fa-shirt" id="saturate"><h3>Saturate</h3></i>
+    <i class="fa-solid fa-shirt" id="sepia"><h3>Sepia</h3></i>
+    <i class="fa-solid fa-shirt" id="multipleFilters"><h3>Multiple-Filters</h3></i>
+    <i class="fa-solid fa-shirt" id="multipleFilters2"><h3>Multiple-Filters</h3></i>
     </div>
 </body>
 </html>
